samples/negative/cycle_b.inc
(* $I samples/negative/cycle_a.inc *)
const
  BCONST = 2;
